--- a/pages/shop/shop.less
+++ b/pages/shop/shop.less
@@ -5,244 +5,240 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  background: -webkit-linear-gradient(top, #C7E1FA, #4F8DCC);
+  //background: -webkit-linear-gradient(top, #C7E1FA, #4F8DCC);
 
   .back-button {
     position: fixed;
     left: 32rpx; top: 108rpx;
     width: fit-content; height: 42rpx;
   }
-  .room{
-    padding-left: 8vw;
-    margin-top: 5vh;
+
+  .confirm-button {
+    position: fixed;
+    left: 30%; bottom: 45%;
+
+    width: 40%; height: 80rpx;
+    margin-bottom: 32rpx;
+
+    background-color: white;
+    border-radius: 40rpx;
+
+    font-size: 32rpx;
+    line-height: 80rpx;
+
+    text-align: center;
   }
-  .column{
-    display: flex;
-    flex-direction: row;
-    position: absolute;
-    top: 766rpx;
-    .box1 {
-      width: 107rpx;
-      height: 39rpx;
-      flex-direction: row;
+
+  .control-panel {
+    position: fixed;
+    left: 0; right: 0; bottom: 0;
+    width: 100%; height: 45%;
+
+    .top-control {
       display: flex;
-      justify-content: space-between;
-      margin: 12rpx 0 0 30rpx;
+      flex-direction: row;
+
+      //  .box1 {
+      //    width: 107rpx;
+      //    height: 39rpx;
+      //    flex-direction: row;
+      //    display: flex;
+      //    justify-content: space-between;
+      //    margin: 12rpx 0 0 30rpx;
+      //  }
+      //  .coins {
+      //    width: 28rpx;
+      //    height: 25rpx;
+      //    margin-top: 7rpx;
+      //  }
+      //  .coinsText {
+      //    width: 68rpx;
+      //    height: 39rpx;
+      //    color: rgba(0,0,0,1);
+      //    font-size: 28rpx;
+      //    text-align: left;
+      //  }
+      //  .return{
+      //    width: 144rpx;
+      //    height: 51rpx;
+      //    flex-direction: row;
+      //    display: flex;
+      //    justify-content: space-between;
+      //    margin: 7rpx 0 0 49rpx;
+      //  }
+      //  .sum {
+      //    height: 65rpx;
+      //    border-radius: 16rpx;
+      //    background-color: rgba(255,255,255,1);
+      //    display: flex;
+      //    flex-direction: column;
+      //    width: 165rpx;
+      //    margin-left: 260rpx;
+      //  }
+      //  .back{
+      //    padding-left: 4vw;
+      //  }
+
     }
-    .coins {
-      width: 28rpx;
-      height: 25rpx;
-      margin-top: 7rpx;
-    }
-    .coinsText {
-      width: 68rpx;
-      height: 39rpx;
-      color: rgba(0,0,0,1);
-      font-size: 28rpx;
-      text-align: left;
-    }
-  }
-  .return{
-    width: 144rpx;
-    height: 51rpx;
-    flex-direction: row;
-    display: flex;
-    justify-content: space-between;
-    margin: 7rpx 0 0 49rpx;
-  }
-  .sum {
-    height: 65rpx;
-    border-radius: 16rpx;
-    background-color: rgba(255,255,255,1);
-    display: flex;
-    flex-direction: column;
-    width: 165rpx;
-    margin-left: 260rpx;
-  }
-  .back{
-    padding-left: 4vw;
-  }
-  .choose {
-    position: absolute;
-    left: 0rpx;
-    top: 825rpx;
-    width: 750rpx;
-    height: 91rpx;
-    .rooms {
-      height: 63rpx;
-      border-radius: 26rpx;
-      background-color: rgba(255,255,255,1);
-      width: 121rpx;
-      position: absolute;
-      left: 53rpx;
-      top: 28rpx;
-      text-align: center;
-      text{
+    .tab-buttons {
+      height: 64rpx;
+      padding-left: 24rpx;
+
+      display: flex;
+      flex-direction: row;
+
+      .tab-button {
+        width: 124rpx;
+        height: 64rpx;
+
+        margin: 0 16rpx;
+
+        border-top-left-radius: 24rpx;
+        border-top-right-radius: 24rpx;
+        background-color: rgba(255,255,255,0.5);
+
+        text-align: center;
+
         font-size: 28rpx;
-        position: relative;
-        top: 0.35vh;
+        line-height: 64rpx;
       }
+      .selected {
+        background-color: rgba(255,255,255,1);
+      }
+
+      //.rooms {
+      //  height: 63rpx;
+      //  border-radius: 26rpx;
+      //  background-color: rgba(255,255,255,1);
+      //  width: 121rpx;
+      //  position: absolute;
+      //  left: 53rpx;
+      //  top: 28rpx;
+      //  text-align: center;
+      //  text{
+      //    font-size: 28rpx;
+      //    position: relative;
+      //    top: 0.35vh;
+      //  }
+      //}
+      //.motions {
+      //  height: 63rpx;
+      //  border-radius: 26rpx;
+      //  background-color: rgba(255,255,255,0.5);
+      //  width: 121rpx;
+      //  position: absolute;
+      //  left: 209rpx;
+      //  top: 28rpx;
+      //  text-align: center;
+      //  text{
+      //    font-size: 28rpx;
+      //    position: relative;
+      //    top: 0.35vh;
+      //  }
+      //}
     }
-    .motions {
-      height: 63rpx;
-      border-radius: 26rpx;
-      background-color: rgba(255,255,255,0.5);
-      width: 121rpx;
+    .shelf {
       position: absolute;
-      left: 209rpx;
-      top: 28rpx;
-      text-align: center;
-      text{
-        font-size: 28rpx;
-        position: relative;
-        top: 0.35vh;
-      }
-    }
-  }
-}
-.shelf {
-  height: 50vh;
-  background-color: rgba(0,0,0,0.29);
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  position: absolute;
-  top: 56.5vh;
-  .detail {
-    width: 95%;
-    height: 647rpx;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 6.8vw;
-    margin-top: 2vh;
-    .room-container {
-      flex-wrap: wrap;
-      display: flex;
-      flex-direction: row;
-      .room {
-        height: 216rpx;
-        border-radius: 16rpx;
+      left: 0; top: 64rpx; bottom: 0;
+      width: 100%;
+
+      padding-top: 32rpx;
+      padding-bottom: 48rpx;
+
+      background-color: rgba(0,0,0,0.29);
+
+      .shop-container {
+        width: calc((186rpx + 48rpx + 8rpx) * 3);
+        height: fit-content;
+
+        margin: 0 auto;
+
+        flex-wrap: wrap;
         display: flex;
-        flex-direction: column;
-        width: 186rpx;
-        position: relative;
-        margin-bottom: 2vh;
-        background: rgba(255,255,255,1);
-        margin-right: 6.2vw;
-        .room-img {
-          margin:5rpx 0 0 8rpx;
-          width: 23.5vw;
-          height: 25vw;
-        }
-        .tap1{
-          margin-left: auto;
-          margin-right: auto;
+        flex-direction: row;
+        align-content: center;
+        align-items: center;
+        justify-items: center;
+        //justify-content: center;
+
+        .room {
           position: relative;
-          bottom: 0.5vh;
-          font-size: 25rpx;
-          color: white;
-        }
-       .tap2{
-          margin-left: auto;
-          margin-right: auto;
-          position: relative;
-          bottom: 0.5vh;
-          font-size: 25rpx;
-        }
-        .price-box {
-          width: 90rpx;
-          height: 25rpx;
-          flex-direction: row;
           display: flex;
-          justify-content: space-between;
-          margin-left: auto;
-          margin-right: auto;
-          position: absolute;
-          top: 11vh;
-          left: 6vw;
-          image {
-            width: 24rpx; height: 24rpx;
+          flex-direction: column;
+
+          width: 186rpx; height: 216rpx;
+          padding: 12rpx 4rpx 4rpx;
+          margin: 16rpx 24rpx;
+
+          border-radius: 16rpx;
+          background: rgba(255,255,255,1);
+
+          .room-img {
+            width: 100%;
+            height: 80%;
           }
-          .price {
-            color: rgba(0,0,0,1);
-            font-size: 28rpx;
-            text-align: left;
-            position: relative;
-            bottom: 0.3vh;
+          .bottom {
+            height: 20%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            .using-flag {
+              font-size: 24rpx;
+              text-align: center;
+              color: white;
+            }
+            .switch-flag {
+              font-size: 24rpx;
+              text-align: center;
+              color: black;
+            }
+            .price-box {
+              display: flex;
+              flex-direction: row;
+              justify-content: center;
+              image {
+                width: 24rpx; height: 24rpx;
+              }
+              .price {
+                color: black;
+                font-size: 24rpx;
+                text-align: center;
+                margin-left: 16rpx;
+              }
+            }
+          }
+          .locked-flag{
+            position: absolute;
+            left: 0; right: 0; top: 0; bottom: 0;
+
+            background-color: rgba(128, 128, 128, 0.5);
+            border-radius: 16rpx;
+
+            padding: 8rpx;
+
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            text {
+              color: rgba(255,255,255,1);
+              text-align: center;
+            }
           }
         }
-        .unlock{
-          position: relative;
-          bottom: 6vh;
-          padding-left: 1vw;
-          width: 170rpx;
-          height: 35rpx;
-          color: rgba(255,255,255,1);
-          font-size: 25rpx;
-          text-align: left;
+        .room.using {
+          background-color: rgba(0,0,0,0.46) !important;
+        }
+        .room.locked {
+          background-color: rgba(255,255,255,0.4);
+        }
+        .room.selected {
+          background-color: palegoldenrod;
         }
       }
-      .using {
-        background-color: rgba(0,0,0,0.46);
-      }
-    }
-    .motion-container{
-      flex-wrap: wrap;
-      display: flex;
-      flex-direction: row;
-      .motions{
-        height: 216rpx;
-        border-radius: 16rpx;
-        display: flex;
-        flex-direction: column;
-        width: 186rpx;
-        position: relative;
-        margin-bottom: 2vh;
-        background: rgba(255,255,255,1);
-        margin-right: 6.2vw;
-        .roomImg {
-          margin:5rpx 0 0 8rpx;
-          width: 23.5vw;
-          height: 25vw;
-        }
-        .tap2{
-          margin-left: auto;
-          margin-right: auto;
-          position: relative;
-          bottom: 0.5vh;
-          font-size: 25rpx;
-        }
-        .price-box {
-          width: 90rpx;
-          height: 25rpx;
-          flex-direction: row;
-          display: flex;
-          justify-content: space-between;
-          margin-left: auto;
-          margin-right: auto;
-          position: absolute;
-          top: 11vh;
-          left: 6vw;
-        .price {
-          color: rgba(0,0,0,1);
-          font-size: 28rpx;
-          text-align: left;
-          position: relative;
-          bottom: 0.3vh;
-        }
-      }
-      .unlock{
-        position: relative;
-        bottom: 6vh;
-        padding-left: 1vw;
-        width: 170rpx;
-        height: 35rpx;
-        color: rgba(255,255,255,1);
-        font-size: 25rpx;
-        text-align: left;
-      }
-    }
     }
   }
 }
