[Enhancement] 优化各个逻辑

--- a/pages/shop/shop.less
+++ b/pages/shop/shop.less
@@ -236,7 +236,7 @@
           background-color: rgba(255,255,255,0.4);
         }
         .room.selected {
-          background-color: palegoldenrod;
+          background-color: rgba(255, 128, 255, 0.25);
         }
       }
     }
