--- a/pages/square/square.less
+++ b/pages/square/square.less
@@ -74,8 +74,8 @@
           }
 
           .room-level-name {
-            width: 50%;
-            padding: 12rpx 42rpx;
+            min-width: 60%;
+            padding: 12rpx 24rpx;
 
             display: flex;
             justify-content: space-between;
