--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -68,15 +68,12 @@
   }
   .focus-btn {
     position: fixed;
-    left: 28%;
-    right: 28%;
-    bottom: 15%;
+    left: 28%; right: 28%; bottom: 15%;
 
-    width: 44%;
-    height: 6%;
+    width: 44%; height: 96rpx;
 
     background-color: white;
-    border-radius: 64rpx;
+    border-radius: 48rpx;
 
     display: flex;
     justify-content: center;
@@ -87,7 +84,7 @@
       font-weight: bold;
     }
   }
-  .toShop{
+  .shop-btn{
     width: 8vw;
     height: 8vw;
     position: fixed;
@@ -98,7 +95,7 @@
     background-color: #979797;
     border-radius: 9px;
   }
-  .toSetting{
+  .setting-btn{
     width: 7vw;
     height: 7vw;
     position: fixed;
@@ -561,17 +558,18 @@ van-dialog {
       padding: 16rpx 32rpx;
     }
   }
-  .room-status{
-    animation: 2s linear 0s move-in;
-    position: absolute;
-    left: 74vw;
-    bottom: 25vh;
-    width: 30vw;
-    font-size: 3vw;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-  }
+}
+
+.room-status{
+  animation: 2s linear 0s move-in;
+  position: absolute;
+  left: 74vw;
+  bottom: 25vh;
+  width: 30vw;
+  font-size: 3vw;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .remind{
