--- a/pages/square/square.wxml
+++ b/pages/square/square.wxml
@@ -4,7 +4,7 @@
   <view class="container-top">
     <avatar-display avatar="{{player.avatarUrl}}" name="{{player.name}}" />
   </view>
-  <gold-level-display gold="{{player.gold}}" level="99" expRate="0.2333" />
+  <gold-level-display gold="{{player.gold}}" level="{{player.level}}" expRate="{{player.expRate}}" />
   <!-- <view class="search">
     <input value="输入id搜索" />
     <image class="img" src="../../assets/square/search.png" mode="widthFix"></image>
