--- a/pages/visit/visit.wxml
+++ b/pages/visit/visit.wxml
@@ -2,55 +2,127 @@
 <canvas type='webgl' id="main-canvas"></canvas>
 
 <view class="content">
-  <image class="return" src="../../assets/visit/return.png" mode="heightFix" bindtap="return"></image>
-  <gold-level-display gold="50000" level="99" expRate="0.2333" />
-  <view class="room-name">
-    <input class="text" value="摆烂小屋" placeholder="房间名不能为空~" disabled="true"/>
-  </view>
-  <view class="focus-btn" bindtap="onClickStart">
+  <image class="back-button" src="../../assets/shop/back.png" mode="heightFix" bind:tap="back"></image>
+  <gold-level-display gold="{{player.gold}}" level="{{player.level}}" expRate="{{player.expRate}}" />
+  <view class="room-name">{{item.name}}</view>
+  <view wx:if="{{!runtimeFocus}}" class="focus-btn"
+        bind:tap="onClickShow" data-window="Start">
     <view class="text">专注</view>
   </view>
-  <view class="content-bottom">
-    <avatar-display class="avatar" avatar="../../assets/square/room.jpg" name="Exermon" isShowBorder="{{false}}" />
-    <view class="slogan">
-      好好学习！加油买房。
+<!--  <view class="content-bottom">-->
+<!--    <avatar-display class="avatar"-->
+<!--                    avatar="{{item.player.avatarUrl}}"-->
+<!--                    name="{{item.player.name}}"-->
+<!--                    isShowBorder="{{false}}" />-->
+<!--    <view class="slogan">{{item.notice}}</view>-->
+<!--  </view>-->
+  
+  <view class="focus-bottom">
+<!--    <view class="weather-status">-->
+<!--      <image src="../../assets/main/thunder.png" class="weather" mode="heightFix" />-->
+<!--      <image src="../../assets/main/thunder.png" class="weather" mode="heightFix" />-->
+<!--      <image src="../../assets/main/rainy.png" class="weather" mode="heightFix" />-->
+<!--      <image src="../../assets/main/rainy.png" class="weather" mode="heightFix" />-->
+<!--    </view>-->
+    <view class="bottom-info">
+      <view class="player-info">
+        <image class="avatar" src="{{item.player.avatarUrl}}"></image>
+        <text class="player-name">{{item.player.name}}</text>
+      </view>
+      <view class="slogan">{{item.notice}}</view>
+    </view>
+  </view>
+  
+  <view class="room-status">
+    <!--      <text class="status-text">3人正在专注中</text>-->
+    <!--      <text class="status-text">小黑已开始专注</text>-->
+    <!--      <text class="status-text">小黑已结束专注</text>-->
+    <!--      <text class="status-text">小黑已离开房间</text>-->
+  </view>
+  
+  <view wx:if="{{runtimeFocus && focus.mode==1}}">
+    <view class="remind" wx:if="{{!isDown && runtimeFocus.invalidCount <= 1}}">
+      <text class="remind-text1">准备好了吗？</text>
+      <text class="remind-text2">反扣手机开始专注！</text>
+      <text class="remind-text3">请在{{runtimeFocus.restInvalidTime}}s内把手机反扣在桌面上</text>
+    </view>
+    <view class="remind" wx:if="{{!isDown && runtimeFocus.invalidCount > 1}}">
+      <text class="remind-text1">累了吗？快结束啦！</text>
+      <text class="remind-text2">加油坚持住！</text>
+      <text class="remind-text3">请在{{runtimeFocus.restInvalidTime}}s内把手机反扣回桌面</text>
     </view>
   </view>
 </view>
 
-<van-dialog use-slot show="{{ isShowStartConfig }}" showConfirmButton="{{false}}" bind:close="onClickHide" close-on-click-overlay data-windowName="start">
+<view wx:if="{{runtimeFocus}}" class="cancel-button" bind:tap="onCancelTap">取消专注</view>
+
+<van-dialog use-slot show="{{ isShowStartWindow }}" show-confirm-button="{{false}}" bind:close="onClickHide" close-on-click-overlay data-window="Start">
   <view class="start-config">
     <view class="start-config-top">
-      <image class="top-img" src="/assets/main/desc.png" mode="heightFix"></image>
-      <image class="top-img" src="/assets/main/close.png" mode="heightFix" bindtap="onClickHide" data-windowName="start"></image>
+      <image class="top-img" src="/assets/main/desc.png" mode="heightFix" />
+      <image class="top-img" src="/assets/main/close.png" mode="heightFix" bindtap="onClickHide" data-window="Start" />
     </view>
-    <image class="clock-img" src="/assets/main/clock.png" mode="widthFix">
-    </image>
-    <van-slider value="{{time}}" bind:drag="onDragTime" min="0" max="120" />
+    <image class="clock-img" src="/assets/main/clock.png" mode="widthFix" />
+    <van-slider value="{{focus.duration}}" min="{{item.minDuration}}" max="{{item.maxDuration}}" bind:drag="onDragTime" />
     <view class="time">
       专注时长
-      <text>{{time}}</text>
+      <text>{{focus.duration}}</text>
       /min
     </view>
     <view class="content">
       <view class="desc">专注内容</view>
-      <view class="btn" bindtap="onClickSelector">沉迷学习</view>
+      <view class="btn" bindtap="onClickShow" data-window="Tags">{{focusTags[focus.tagIdx]}}</view>
     </view>
     <view class="mode-set">
-      <view class="mode">基础模式</view>
-      <view class="mode">反盖模式</view>
+      <view class="mode {{focus.mode == 0 ? 'selected' : ''}}" bind:tap="onModeTab" data-index="{{0}}">基础模式</view>
+      <view class="mode {{focus.mode == 1 ? 'selected' : ''}}" bind:tap="onModeTab" data-index="{{1}}">反盖模式</view>
     </view>
-    <view class="text">完成后经验+{{111}} 金币+{{111}}</view>
-    <view class="text">超时后可以继续获得奖励哦～</view>
-    <view class="start-btn">开始专注</view>
+    <view class="text">预计经验+{{focus.expectExpReward}} 金币+{{focus.expectGoldReward}}</view>
+    <!--    <view class="text">超时后可以继续获得奖励哦～</view>-->
+    <view class="start-btn" bind:tap="onSubmit">开始专注</view>
   </view>
 </van-dialog>
-
-<van-dialog use-slot show="{{ isShowSelectorConfig }}" showConfirmButton="{{false}}" bind:close="onClickHide" close-on-click-overlay data-windowName="selector">
-  <view class="selector-config">
-    <view class="content">
-      <view class="btn" wx:for="{{selectorList}}">{{item}}</view>
+<van-dialog use-slot show="{{ isShowResultWindow }}" show-confirm-button="{{false}}" bind:close="onClickHide" close-on-click-overlay data-window="Result">
+  <view class="result-config">
+    <view class="focus-title">
+      <text lines="1">本次专注时长</text>
+      <text lines="1" class="tag">本次专注内容</text>
     </view>
-    <view class="selector-btn" bindtap="onClickHide" data-windowName="selector">完成</view>
+    <view class="focus-val">
+      <text lines="1">{{focus.realDuration}}min</text>
+      <view class="focus-type" bindtap="onClickShow" data-window="Tags">
+        {{focusTags[focus.tagIdx]}}
+      </view>
+    </view>
+    <textarea class="focus-content" lines="1" placeholder="专注内容备注…" placeholder-style="font-size: 24rpx" value="{{focus.note}}" bind:input="onNoteInput" />
+    <view class="result-config-top">
+      <view class="gold-reward">
+        <image class="coins" src="/assets/square/gold.png" mode="aspectFit" />
+        <text>+{{resAni.gold}}</text>
+      </view>
+      <view class="upgrade">
+        <view class="level">{{resAni.level}}级</view>
+        <view class="experience">
+          <view class="progress" style="width: {{resAni.expRate * 100}}%"></view>
+          <text class="add">+{{resAni.exp}}</text>
+          <view class="tips">
+            距离升级还需{{resAni.restExp}}
+          </view>
+        </view>
+      </view>
+    </view>
+    <view class="result-btn" bind:tap="onFinalConfirm" data-window="Result">完成</view>
+  </view>
+</van-dialog>
+<van-dialog use-slot show="{{ isShowTagsWindow }}"
+            show-confirm-button="{{false}}"
+            bind:close="onClickHide"
+            close-on-click-overlay
+            width="85%" data-window="Tags">
+  <view class="tags-config">
+    <view class="tags-content">
+      <view wx:for="{{focusTags}}" class="btn {{focus.tagIdx == index ? 'selected' : ''}}" bind:tap="onTagTab" data-index="{{index}}">{{item}}</view>
+    </view>
+    <view class="selector-btn" bindtap="onClickHide" data-window="Tags">完成</view>
   </view>
 </van-dialog>
