--- a/pages/square/square.less
+++ b/pages/square/square.less
@@ -78,15 +78,20 @@
             padding: 12rpx 24rpx;
 
             display: flex;
-            justify-content: space-between;
 
             border-radius: 16rpx;
 
             background-color: rgba(0, 0, 0, 0.123);
             color: white;
 
+            text-align: center;
+
             .room-level {
+              width: 15%;
               margin: 0 8rpx;
+            }
+            .room-name {
+              width: 85%;
             }
           }
         }
