--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -7,11 +7,11 @@
     </view>
     <gold-level-display wx:if="{{!runtimeFocus}}" gold="{{player.gold}}" level="{{player.level}}" expRate="{{player.expRate}}" />
     <view class="room-info {{runtimeFocus ? 'focusing' : ''}}">
-      <text class="top-player-name" wx:if="{{runtimeFocus}}">{{player.name}}'s</text>
+      <text wx:if="{{runtimeFocus}}" class="top-player-name">{{player.name}}'s</text>
       <view class="room-name">
         <input class="text" maxlength="6" value="{{item.name}}" placeholder="输入房间名~" disabled="{{runtimeFocus}}" bind:blur="onRoomNameBlur" />
       </view>
-      <text class="rest-time">{{runtimeFocus.restTime}}</text>
+      <text wx:if="{{runtimeFocus}}" class="rest-time">{{runtimeFocus.restTime}}</text>
     </view>
     <image wx:if="{{!runtimeFocus}}" class="shop-btn" src="../../assets/main/shop.png" mode="aspectFit" bind:tap="onShopTap" />
     <!-- <image wx:if="{{!runtimeFocus}}" class="setting-btn"
