--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -2,7 +2,7 @@
 <view class="content">
  <view class="page">
    <view class="player-info">
-     <gold-level-display gold="{{player.gold}}" level="99" expRate="0.2333"/>
+     <gold-level-display gold="{{player.gold}}" level="{{player.level}}" expRate="{{player.expRate}}"/>
      <image class="avatar" src="{{player.avatarUrl}}"
             mode="aspectFill" bind:tap="onAvatarTap"/>
      <text class="name">{{player.name}}</text>
