--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -564,13 +564,16 @@ van-dialog {
 .room-status{
   animation: 2s linear 0s move-in;
   position: absolute;
-  left: 74vw;
+  left: 58vw;
   bottom: 25vh;
-  width: 30vw;
+  width: 40vw;
   font-size: 3vw;
   display: flex;
   flex-direction: column;
-  text-align: center;
+  text-align: right;
+  .status-text{
+    height: 2vh;
+  }
 }
 
 .remind{
