[Enhancement] 优化专注播报

--- a/pages/visit/visit.less
+++ b/pages/visit/visit.less
@@ -549,18 +549,35 @@ van-dialog {
       padding: 16rpx 32rpx;
     }
   }
-  .room-status{
-    animation: 2s linear 0s move-in;
-    position: absolute;
-    left: 74vw;
-    bottom: 25vh;
-    width: 30vw;
-    font-size: 3vw;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+
+}
+
+.room-status{
+  animation: 2s linear 0s move-in;
+  position: absolute;
+  left: 58vw;
+  bottom: 25vh;
+  width: 40vw;
+  font-size: 3vw;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  .status-text{
+    height: 2vh;
   }
 }
+
+//.room-status{
+//  animation: 2s linear 0s move-in;
+//  position: absolute;
+//  left: 74vw;
+//  bottom: 25vh;
+//  width: 30vw;
+//  font-size: 3vw;
+//  display: flex;
+//  flex-direction: column;
+//  text-align: center;
+//}
 
 .remind{
   position: fixed;
