--- a/pages/visit/visit.wxml
+++ b/pages/visit/visit.wxml
@@ -39,10 +39,12 @@
   </view>
   
   <view class="room-status">
-    <!--      <text class="status-text">3人正在专注中</text>-->
-    <!--      <text class="status-text">小黑已开始专注</text>-->
-    <!--      <text class="status-text">小黑已结束专注</text>-->
-    <!--      <text class="status-text">小黑已离开房间</text>-->
+    <view class="status-text">{{focusing}}人正在专注中</view>
+    <scroll-view scroll-y="{{true}}" style="height: 6vh;">
+      <view class="status-text" wx:for="{{messages}}">
+        <text>{{item.name}}{{item.status}}</text>
+      </view>
+    </scroll-view>
   </view>
   
   <view wx:if="{{runtimeFocus && focus.mode==1}}">
