[Enhancement] 修复弹窗尺寸问题

--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -113,6 +113,10 @@
   width: fit-content; height: 42rpx;
 }
 
+.van-dialog {
+  width: 75vw !important;
+}
+
 van-dialog {
   display: flex;
   align-items: center;
