--- a/pages/square/square.less
+++ b/pages/square/square.less
@@ -1,8 +1,24 @@
 
-.container {
+.mask {
+
+  position: fixed;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  z-index: 10;
+
+  .top-mask {
+    position: absolute;
+    left: 0; top: 0rpx;
+    width: 100%; height: 256rpx;
+  }
+  .bottom-mask {
+    position: absolute;
+    left: 0; bottom: 0rpx;
+    width: 100%; height: 256rpx;
+  }
 
   .container-top {
-    position: fixed;
+    position: absolute;
     top: 80rpx;
   }
 
@@ -42,58 +58,61 @@
 
     top: 268rpx; bottom: 160rpx;
 
-    .room-list-content {
+  }
+}
+
+.room-list-content {
+
+  padding-top: 256rpx;
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  justify-content: start;
+  flex-wrap: wrap;
+
+  .room {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+
+    margin: 24rpx 0;
+
+    .room-thumbnail {
+      width: 60%;
+    }
+    .room-desc {
       width: 100%;
 
       display: flex;
-      flex-direction: row;
-      align-items: start;
-      justify-content: start;
-      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center;
 
-      .room {
+      .room-user-name {
+        margin: 16rpx 0;
+      }
+
+      .room-level-name {
+        min-width: 60%;
+        padding: 12rpx 24rpx;
+
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 50%;
 
-        margin: 24rpx 0;
+        border-radius: 16rpx;
 
-        .room-thumbnail {
-          width: 60%;
+        background-color: rgba(0, 0, 0, 0.123);
+        color: white;
+
+        text-align: center;
+
+        .room-level {
+          width: 15%;
+          margin: 0 8rpx;
         }
-        .room-desc {
-          width: 100%;
-
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-
-          .room-user-name {
-            margin: 16rpx 0;
-          }
-
-          .room-level-name {
-            min-width: 60%;
-            padding: 12rpx 24rpx;
-
-            display: flex;
-
-            border-radius: 16rpx;
-
-            background-color: rgba(0, 0, 0, 0.123);
-            color: white;
-
-            text-align: center;
-
-            .room-level {
-              width: 15%;
-              margin: 0 8rpx;
-            }
-            .room-name {
-              width: 85%;
-            }
-          }
+        .room-name {
+          width: 85%;
         }
       }
     }
