[Enhancement] 解决下拉刷新功能

--- a/pages/square/square.less
+++ b/pages/square/square.less
@@ -1,4 +1,6 @@
-
+page{
+  height: 100%;
+}
 .mask {
 
   position: fixed;
@@ -65,6 +67,7 @@
 
   padding-top: 256rpx;
   width: 100%;
+  height: fit-content;
 
   display: flex;
   flex-direction: row;
