--- a/pages/square/square.less
+++ b/pages/square/square.less
@@ -16,7 +16,7 @@ page{
   .bottom-mask {
     position: absolute;
     left: 0; bottom: 0rpx;
-    width: 100%; height: 256rpx;
+    width: 100%; height: 160rpx;
   }
 
   .container-top {
@@ -64,8 +64,10 @@ page{
 }
 
 .room-list-content {
+  position: absolute;
 
   padding-top: 256rpx;
+  padding-bottom: 160rpx;
   width: 100%;
   height: fit-content;
 
