--- a/pages/square/square.less
+++ b/pages/square/square.less
@@ -8,6 +8,8 @@ page{
   width: 100%; height: 100%;
   z-index: 10;
 
+  pointer-events: none;
+
   .top-mask {
     position: absolute;
     left: 0; top: 0rpx;
@@ -22,6 +24,10 @@ page{
   .container-top {
     position: absolute;
     top: 80rpx;
+  }
+
+  .absoluter {
+    pointer-events: all;
   }
 
   .search {
