--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -93,7 +93,7 @@
     right: 4%;
     top: 11%;
     padding: 0.8vw;
-    background-color: #979797;
+    background-color: rgba(0,0,0,0.33);
     border-radius: 9px;
   }
   .setting-btn{
@@ -138,7 +138,7 @@ van-dialog {
       width: 100%;
 
       .top-img {
-        height: 80rpx;
+        height: 42rpx;
         margin: 32rpx 32rpx;
       }
     }
